--- a/contacto.html
+++ b/contacto.html
@@ -49,64 +49,25 @@
               </ul>
 
             </nav>
-        </div>
-      </header>
-<section id="slide-wrap">
-  <ul class="uno">
-    <li>
-      <img src="img/pics/slider/uno.jpg" alt="moda1">
-    </li>
-    <li>
-      <img src="img/pics/slider/dos.jpg" alt="moda2">
-    </li>
-    <li>
-      <img src="img/pics/slider/tres.jpg" alt="moda3">
-    </li>
-    <li>
-      <img src="img/pics/slider/cuatro.jpg" alt="moda4">
-    </li>
-  </ul>
-<section>
-</div>
-    </div>
 
+            <section class="one-third" id="map">
+              <div class="icon-wrapp">
 
-  <section class="one-third" id="skills">
-    <div class="icon-wrap">
-      <i class="fa fa-desktop"></i>
+              </div>
+            <h3>Ubicacion</h3>
+            <img src="img/pics/map.jpg" alt="Ubicacion">
+            <a href="#"id="letra">
+<p>Centro Comercial ubicado en el centro de Retalhuleu.
+  Goza de una amplia variedad de tiendas
+  con lo más exclusivo de Guatemala y los mejores restaurantes.
+Dirección:	Retalhuleu, Retalhuleu - 5 Avenida A y 1 Calle Zona 5
+Horario:	De Lunes a Domingo de 09:00 a 20:00
+Teléfono:	7771-7208
+Web:
+<p>
+</a>
+  </div>
 
-    </div>
-<h3>Diseños</h3>
-<p>El diseño de moda es el arte de aplicar el diseño y la estética o la belleza natural de prendas de vestir y accesorios. El diseño de moda se ve influenciada por las latitudes culturales y sociales, y varían con el tiempo y el lugar. Los diseñadores de moda funcionan de diversas maneras en el diseño y accesorios de la ropa, debido al tiempo requerido para llevar una prenda de vestir en el mercado ya veces tienen que predecir los gustos cambiantes de los consumidores.</p>
- <img src="img/pics/2.jpg" alt="">
-
-  </section>
-  <section class="one-third" id="skills">
-    <div class="icon-wrap">
-      <i class="fa fa-pencil-square-o"></i>
-
-    </div>
-<h3>Tendencias Primavera/Verano 2019</h3>
-<p>LAS TENDENCIAS 2019 QUE NO PUEDES PERDER DE VISTA
-De todos los desfiles que hemos visto durante los últimos meses, hemos extraído las tendencias más repetidas y tenemos una lista completa de lo que vamos a llevar en la Primavera-Verano de 2019. En total son 16 tendencias y muchas de ellas ya las puedes empezar a llevar ahora. Te contamos cuáles serán los fuertes de la próxima temporada.
-
-</p>
-
- <img src="img/pics/PIC.jpg" alt="">
-
-  </section>
-  <section class="one-third" id="skills">
-    <div class="icon-wrap">
-      <i class="fa fa-file-code-o"></i>
-
-    </div>
-  <h3>desarrollo de moda</h3>
-  <p>Existen dos características que destacan a la moda.Una es el producto físico y otra el producto imaginario. El producto físico es lo creado físicamente por algún diseñador     (lo que se puede ver y tocar). El producto imaginario son los efectos que tiene la moda en la sociedad.
-Es muy fácil confundir lo que es estilo y lo que es moda.
-Estilo es el conjunto de características que diferencian a unos de otros. (estilo clásico, juvenil, etc). La moda es nada más y nada menos, que ”el estilo que prevalece en un tiempo determinado".</p>
-  <img src="img/pics/3.jpg" alt="">
-
-  </section>
 
 
 <footer>
@@ -114,7 +75,6 @@ Estilo es el conjunto de características que diferencian a unos de otros. (esti
   <div class="icon-text">
     <div class="icon-text-icon">
       <ul class="footer-nav">
-
 
         <li>
           <a href="acercade.html">Acerca de</a>
